--- a/Z64Utils/App.axaml
+++ b/Z64Utils/App.axaml
@@ -16,6 +16,6 @@
                 <ResourceInclude Source="/Controls/HexTextBox/Themes/Fluent.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-        <FontFamily x:Key="MonospacedFont">avares://Z64Utils_Avalonia/Assets/Fonts#Hack</FontFamily>
+        <FontFamily x:Key="MonospacedFont">avares://Z64Utils/Assets/Fonts#Hack</FontFamily>
     </Application.Resources>
 </Application>
