--- a/Z64Utils/Views/DListViewerWindow.axaml
+++ b/Z64Utils/Views/DListViewerWindow.axaml
@@ -20,7 +20,10 @@
         <TextBlock DockPanel.Dock="Top" Text="{Binding DecodeError}" />
         <TextBlock DockPanel.Dock="Top">Render error:</TextBlock>
         <TextBlock DockPanel.Dock="Top" Text="{Binding RenderError}" />
-        <v:DLViewerControl Name="DLViewerGL" Renderer="{Binding Renderer}"
-            DisplayElements="{Binding DisplayElements}" RenderError="{Binding RenderError}" />
+        <Grid>
+            <v:DLViewerControl Name="DLViewerGL" Renderer="{Binding Renderer}"
+                DisplayElements="{Binding DisplayElements}" RenderError="{Binding RenderError}" />
+            <TextBlock Text="{Binding GLInfoText}" />
+        </Grid>
     </DockPanel>
 </Window>
