--- a/Z64Utils/Views/DListViewerWindow.axaml
+++ b/Z64Utils/Views/DListViewerWindow.axaml
@@ -18,7 +18,7 @@
         <StackPanel DockPanel.Dock="Top"
             IsVisible="{Binding DecodeError, Converter={x:Static ObjectConverters.IsNotNull}}">
             <TextBlock>Decode error:</TextBlock>
-            <TextBlock DockPanel.Dock="Top" Text="{Binding DecodeError}" />
+            <TextBlock Text="{Binding DecodeError}" />
         </StackPanel>
         <StackPanel DockPanel.Dock="Top"
             IsVisible="{Binding RenderError, Converter={x:Static ObjectConverters.IsNotNull}}">
