--- a/Z64Utils/Views/MainWindow.axaml
+++ b/Z64Utils/Views/MainWindow.axaml
@@ -12,19 +12,51 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="ROM">
-                <MenuItem Header="Open" Command="{Binding OpenROMCommand}" />
-                <MenuItem Header="Export FS" Command="{Binding ExportFSCommand}" />
-                <MenuItem Header="Save As" Command="{Binding SaveAsCommand}" />
+                <MenuItem.Icon>
+                    <Image Source="avares://Z64Utils/Assets/Icons/file.png" />
+                </MenuItem.Icon>
+
+                <MenuItem Header="Open" Command="{Binding OpenROMCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/open.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Export FS" Command="{Binding ExportFSCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/multiple_files.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Save As" Command="{Binding SaveAsCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/save.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
                 <MenuItem Header="Import File Name List"
                     Command="{Binding ImportFileNameListCommand}" />
                 <MenuItem Header="Export File Name List"
                     Command="{Binding ExportFileNameListCommand}" />
             </MenuItem>
             <MenuItem Header="Tools">
-                <MenuItem Header="Open DList Viewer" Command="{Binding OpenDListViewerCommand}" />
-                <MenuItem Header="F3DZEX Disassembler" Command="{Binding F3DZEXDisassemblerCommand}" />
-                <MenuItem Header="ROM/RAM Conversions" Command="{Binding ROMRAMConversionsCommand}" />
-                <MenuItem Header="Texture Viewer" Command="{Binding TextureViewerCommand}" />
+                <MenuItem Header="Open DList Viewer" Command="{Binding OpenDListViewerCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/cube.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="F3DZEX Disassembler" Command="{Binding F3DZEXDisassemblerCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/code.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="ROM/RAM Conversions" Command="{Binding ROMRAMConversionsCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/conversion.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Texture Viewer" Command="{Binding TextureViewerCommand}">
+                    <MenuItem.Icon>
+                        <Image Source="avares://Z64Utils/Assets/Icons/texture.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
                 <MenuItem Header="Object Analyzer" Command="{Binding ObjectAnalyzerCommand}" />
             </MenuItem>
             <MenuItem Header="Help">
