--- a/Z64Utils/Views/SkeletonViewerWindow.axaml
+++ b/Z64Utils/Views/SkeletonViewerWindow.axaml
@@ -28,8 +28,12 @@
             </StackPanel>
         </StackPanel>
         <DockPanel DockPanel.Dock="Bottom" VerticalAlignment="Center">
-            <Button DockPanel.Dock="Left" Command="{Binding PlayAnimBackwardsCommand}">backwards</Button>
-            <Button DockPanel.Dock="Left" Command="{Binding PlayAnimForwardsCommand}">play</Button>
+            <Button DockPanel.Dock="Left" Command="{Binding PlayAnimBackwardsCommand}">
+                <Image Height="40" Source="avares://Z64Utils/Assets/Icons/play_backwards.png" />
+            </Button>
+            <Button DockPanel.Dock="Left" Command="{Binding PlayAnimForwardsCommand}">
+                <Image Height="40" Source="avares://Z64Utils/Assets/Icons/play.png" />
+            </Button>
             <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" VerticalAlignment="Center"
                 Margin="10,0,10,0">
                 <NumericUpDown Minimum="0" Maximum="{Binding MaxFrame}" Value="{Binding CurFrame}"
