main window: implement save file

--- a/Z64Utils/Views/MainWindow.axaml
+++ b/Z64Utils/Views/MainWindow.axaml
@@ -84,6 +84,8 @@
                                             Command="{Binding OpenObjectAnalyzerCommand}" />
                                         <MenuItem Header="Inject"
                                             Command="{Binding InjectFileCommand}" />
+                                        <MenuItem Header="Save"
+                                            Command="{Binding SaveFileCommand}" />
                                     </ContextMenu>
                                 </Setter>
                             </Style>
