--- a/Z64Utils/Views/MainWindow.axaml
+++ b/Z64Utils/Views/MainWindow.axaml
@@ -86,6 +86,8 @@
                                             Command="{Binding InjectFileCommand}" />
                                         <MenuItem Header="Save"
                                             Command="{Binding SaveFileCommand}" />
+                                        <MenuItem Header="Rename"
+                                            Command="{Binding RenameFileCommand}" />
                                     </ContextMenu>
                                 </Setter>
                             </Style>
