--- a/Z64Utils/Views/ObjectAnalyzerWindow.axaml
+++ b/Z64Utils/Views/ObjectAnalyzerWindow.axaml
@@ -1,6 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils_Avalonia"
+    xmlns:v.OHED="using:Z64Utils.Views.OHED"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -58,12 +59,12 @@
                 >
                     <ContentControl Content="{Binding ObjectHolderEntryDetailsViewModel}">
                         <ContentControl.DataTemplates>
-                            <vm:OHEDViewLocator />
+                            <v.OHED:OHEDViewLocator />
                         </ContentControl.DataTemplates>
                     </ContentControl>
                 </TabItem>
                 <TabItem Header="Binary">
-                    <vm:HexViewerControl
+                    <v.OHED:HexViewerControl
                         DataBytes="{Binding ObjectHolderEntryDataBytes}"
                         FirstByteAddress="{Binding ObjectHolderEntryFirstByteAddress}"
                     />
