--- a/Z64Utils/Views/OHED/TextOHEDView.axaml
+++ b/Z64Utils/Views/OHED/TextOHEDView.axaml
@@ -1,11 +1,11 @@
 <UserControl xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Z64Utils_Avalonia"
+    xmlns:vm.OHED="using:Z64Utils.ViewModels.OHED"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.TextOHEDView"
-    x:DataType="vm:TextOHEDViewModel"
+    x:Class="Z64Utils.Views.OHED.TextOHEDView"
+    x:DataType="vm.OHED:TextOHEDViewModel"
 >
     <TextBox AcceptsReturn="True" IsReadOnly="True" FontFamily="{StaticResource MonospacedFont}" Text="{Binding Text}" />
 </UserControl>
