--- a/Z64Utils/Views/OHED/VertexArrayOHEDView.axaml
+++ b/Z64Utils/Views/OHED/VertexArrayOHEDView.axaml
@@ -1,12 +1,11 @@
 <UserControl xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Z64Utils_Avalonia"
-    xmlns:v="using:Z64Utils_Avalonia"
+    xmlns:vm.OHED="using:Z64Utils.ViewModels.OHED"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.VertexArrayOHEDView"
-    x:DataType="vm:VertexArrayOHEDViewModel"
+    x:Class="Z64Utils.Views.OHED.VertexArrayOHEDView"
+    x:DataType="vm.OHED:VertexArrayOHEDViewModel"
 >
     <DockPanel>
         <CheckBox DockPanel.Dock="Top" IsThreeState="True"
