--- a/Z64Utils/Views/DListViewerRenderSettingsWindow.axaml
+++ b/Z64Utils/Views/DListViewerRenderSettingsWindow.axaml
@@ -1,7 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils_Avalonia"
-    xmlns:c="using:Z64Utils_Avalonia"
+    xmlns:c="using:Z64Utils.Controls"
     xmlns:F3DZEX.Render="using:F3DZEX.Render"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
