--- a/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SCPSCC/AddressSCPSCCView.axaml
+++ b/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SCPSCC/AddressSCPSCCView.axaml
@@ -1,6 +1,6 @@
 <UserControl xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Z64Utils_Avalonia"
+    xmlns:vm="using:Z64Utils.ViewModels"
     xmlns:c.HexTextBox="using:Z64Utils.Controls.HexTextBox"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
