--- a/Z64Utils/Views/ObjectAnalyzerWindow.axaml
+++ b/Z64Utils/Views/ObjectAnalyzerWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Z64Utils_Avalonia"
+    xmlns:vm="using:Z64Utils.ViewModels"
     xmlns:v.OHED="using:Z64Utils.Views.OHED"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
