--- a/Z64Utils/Views/UpdateWindow.axaml
+++ b/Z64Utils/Views/UpdateWindow.axaml
@@ -1,11 +1,11 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Z64Utils_Avalonia"
+    xmlns:v="using:Z64Utils_Avalonia"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
     x:Class="Z64Utils_Avalonia.UpdateWindow"
-    x:DataType="vm:UpdateWindowViewModel"
+    x:DataType="v:UpdateWindowViewModel"
     Title="Update"
     SizeToContent="WidthAndHeight"
 >
