--- a/Z64Utils/App.axaml
+++ b/Z64Utils/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="using:Z64Utils.Controls"
-    x:Class="Z64.App"
+    x:Class="Z64Utils.App"
     RequestedThemeVariant="Default">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available
     options. -->
