--- a/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SegmentsConfigPickSegmentContentWindow.axaml
+++ b/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SegmentsConfigPickSegmentContentWindow.axaml
@@ -1,12 +1,12 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils.ViewModels"
-    xmlns:v="using:Z64Utils_Avalonia"
+    xmlns:v.DListViewerBuildingBlocks.SegmentsConfig="using:Z64Utils.Views.DListViewerBuildingBlocks.SegmentsConfig"
     xmlns:c="using:Z64Utils.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.SegmentsConfigPickSegmentContentWindow"
+    x:Class="Z64Utils.Views.DListViewerBuildingBlocks.SegmentsConfig.SegmentsConfigPickSegmentContentWindow"
     x:DataType="vm:SegmentsConfigPickSegmentContentWindowViewModel"
     Title="Pick Segment Content"
     Width="300"
@@ -20,7 +20,7 @@
         <ContentControl Content="{Binding SegmentConfigPickSegmentContentConfigViewModel}"
             Margin="20">
             <ContentControl.DataTemplates>
-                <v:SCPSCCViewLocator />
+                <v.DListViewerBuildingBlocks.SegmentsConfig:SCPSCCViewLocator />
             </ContentControl.DataTemplates>
         </ContentControl>
         <Button Click="OnOKButtonClick" IsEnabled="{Binding IsSegmentPickComplete}" Margin="10">OK</Button>
