--- a/Z64Utils/Views/F3DZEXDisassemblerWindow.axaml
+++ b/Z64Utils/Views/F3DZEXDisassemblerWindow.axaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.F3DZEXDisassemblerWindow"
+    x:Class="Z64Utils.Views.F3DZEXDisassemblerWindow"
     x:DataType="vm:F3DZEXDisassemblerViewModel"
     Title="Disassembly"
 >
