--- a/Z64Utils/Views/CollisionViewerRenderSettingsWindow.axaml
+++ b/Z64Utils/Views/CollisionViewerRenderSettingsWindow.axaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.CollisionViewerRenderSettingsWindow"
+    x:Class="Z64Utils.Views.CollisionViewerRenderSettingsWindow"
     x:DataType="vm:CollisionRenderSettings"
     Title="Collision Render Settings"
     SizeToContent="WidthAndHeight"
