--- a/Z64Utils/Views/CollisionViewerWindow.axaml
+++ b/Z64Utils/Views/CollisionViewerWindow.axaml
@@ -1,11 +1,11 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils.ViewModels"
-    xmlns:v="using:Z64Utils_Avalonia"
+    xmlns:v.DListViewerBuildingBlocks="using:Z64Utils.Views.DListViewerBuildingBlocks"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.CollisionViewerWindow"
+    x:Class="Z64Utils.Views.CollisionViewerWindow"
     x:DataType="vm:CollisionViewerWindowViewModel"
     Title="Collision Viewer"
 >
@@ -13,7 +13,8 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Settings" Command="{Binding OpenCollisionRenderSettingsCommand}" />
         </Menu>
-        <v:CollisionViewerControl Name="CollisionViewerGL" RenderSettings="{Binding RenderSettings}"
+        <v.DListViewerBuildingBlocks:CollisionViewerControl Name="CollisionViewerGL"
+            RenderSettings="{Binding RenderSettings}"
             Polygons="{Binding Polygons}" />
     </DockPanel>
 </Window>
