--- a/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SCPSCC/AddressSCPSCCView.axaml
+++ b/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SCPSCC/AddressSCPSCCView.axaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.AddressSCPSCCView"
+    x:Class="Z64Utils.Views.DListViewerBuildingBlocks.SegmentsConfig.SCPSCC.AddressSCPSCCView"
     x:DataType="vm:AddressSCPSCCViewModel"
 >
     <c.HexTextBox:HexTextBox Value="{Binding Address}" />
