--- a/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SCPSCC/FileSCPSCCView.axaml
+++ b/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SCPSCC/FileSCPSCCView.axaml
@@ -1,11 +1,10 @@
 <UserControl xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils.ViewModels"
-    xmlns:c="using:Z64Utils_Avalonia"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.FileSCPSCCView"
+    x:Class="Z64Utils.Views.DListViewerBuildingBlocks.SegmentsConfig.SCPSCC.FileSCPSCCView"
     x:DataType="vm:FileSCPSCCViewModel"
 >
     <StackPanel>
