--- a/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SegmentConfigControl.axaml
+++ b/Z64Utils/Views/DListViewerBuildingBlocks/SegmentsConfig/SegmentConfigControl.axaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.SegmentConfigControl"
+    x:Class="Z64Utils.Views.DListViewerBuildingBlocks.SegmentsConfig.SegmentConfigControl"
     x:DataType="vm:SegmentConfigControlViewModel"
 >
     <StackPanel Orientation="Horizontal" Margin="5">
