--- a/Z64Utils/Views/ErrorWindow.axaml
+++ b/Z64Utils/Views/ErrorWindow.axaml
@@ -3,7 +3,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.ErrorWindow"
+    x:Class="Z64Utils.Views.ErrorWindow"
     Title="Error"
     SizeToContent="WidthAndHeight"
 >
