--- a/Z64Utils/Views/MainWindow.axaml
+++ b/Z64Utils/Views/MainWindow.axaml
@@ -4,9 +4,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.MainWindow"
+    x:Class="Z64Utils.Views.MainWindow"
     x:DataType="vm:MainWindowViewModel"
-    Title="Z64Utils_Avalonia"
+    Title="Z64Utils"
     Icon="/Assets/kaeton.ico"
 >
     <DockPanel>
