--- a/Z64Utils/Views/ObjectAnalyzerWindow.axaml
+++ b/Z64Utils/Views/ObjectAnalyzerWindow.axaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.ObjectAnalyzerWindow"
+    x:Class="Z64Utils.Views.ObjectAnalyzerWindow"
     x:DataType="vm:ObjectAnalyzerWindowViewModel"
     Title="{Binding WindowTitle}">
 
