--- a/Z64Utils/Views/TextureViewerWindow.axaml
+++ b/Z64Utils/Views/TextureViewerWindow.axaml
@@ -1,7 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils.ViewModels"
-    xmlns:v="using:Z64Utils_Avalonia"
     xmlns:c="using:Z64Utils.Controls"
     xmlns:c.HexTextBox="using:Z64Utils.Controls.HexTextBox"
     xmlns:n64="using:N64"
@@ -9,7 +8,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    x:Class="Z64Utils_Avalonia.TextureViewerWindow"
+    x:Class="Z64Utils.Views.TextureViewerWindow"
     x:DataType="vm:TextureViewerWindowViewModel"
     Title="Texture Viewer"
     Width="900" Height="700"
