ROMRAM conversion window: use EnumComboBox and misc

--- a/Z64Utils/Views/ROMRAMConversionsWindow.axaml
+++ b/Z64Utils/Views/ROMRAMConversionsWindow.axaml
@@ -1,6 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Z64Utils.ViewModels"
+    xmlns:c="using:Z64Utils.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -11,15 +12,11 @@
 >
     <StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10">
-            <ComboBox SelectedIndex="{Binding InputAddressTypeIndex}">
-                <!-- keep in sync with InputAddressTypeEnum in the view model -->
-                <ComboBoxItem>ROM</ComboBoxItem>
-                <ComboBoxItem>VROM</ComboBoxItem>
-                <ComboBoxItem>VRAM</ComboBoxItem>
-            </ComboBox>
-            <TextBox Text="{Binding InputAddressStr}" Watermark="0x0421_2048" />
+            <c:EnumComboBox EnumType="vm:ROMRAMConversionsWindowViewModel+InputAddressTypeEnum"
+                SelectedIndex="{Binding InputAddressType}" />
+            <TextBox Text="{Binding InputAddressStr}" Watermark="0x8080_0000" />
         </StackPanel>
-        <TextBlock Text="{Binding OutputText}" FontFamily="{StaticResource MonospacedFont}" MinWidth="400" MinHeight="100"
-            Margin="10" />
+        <TextBlock Text="{Binding OutputText}" FontFamily="{StaticResource MonospacedFont}"
+            MinWidth="400" MinHeight="100" Margin="10" />
     </StackPanel>
 </Window>
